@@ -368,10 +368,14 @@
       \item \code{intToUtf8()} converts integers corresponding to
       surrogate code points to \code{NA} rather than invalid UTF-8, as
       well as values larger than the current Unicode maximum of
-      \code{0x10FFFF}.
+      \code{0x10FFFF}.  (This aligns with the current RFC3629.)
       
       \item Fix calling of methods on S4 generics that dispatch on
       \code{\dots} when the call contains \code{\dots}.
+
+      \item Following Unicode \sQuote{Corrigendum 9}, the UTF-8
+      representations of U+FFFE and U+FFFF are now regarded as valid by
+      \code{utf8ToInt()}.
     }
   }
 }
